--- a/app/globals.css
+++ b/app/globals.css
@@ -482,7 +482,7 @@ body {
 .article-content p,
 .content-section p {
   color: #9aa3b2;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.75;
   margin-bottom: 1rem;
 }
@@ -525,19 +525,21 @@ body {
 }
 .article-content h2,
 .article-content h3 {
+  scroll-margin-top: 100px;
+}
+.article-content h2 a,
+.article-content h3 a {
   font-weight: 700;
-  margin-top: 3rem;
-  margin-bottom: 1rem;
+  margin: 1rem 0rem;
   color: #f6f6f7;
 }
-.article-content h2 {
-  font-size: 1.875rem;
-}
-.article-content h3 {
+.article-content h2 a {
   font-size: 1.5rem;
 }
+.article-content h3 a {
+  font-size: 1.25rem;
+}
 .article-content a {
-  color: #3b82f6;
   text-decoration: underline;
 }
 .article-content ol,
@@ -545,7 +547,7 @@ body {
   color: #9aa3b2;
   font-size: 1.125rem;
   margin-left: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 .article-content ul {
   list-style-type: disc;
@@ -560,10 +562,25 @@ body {
 .article-content blockquote {
   border-left: 4px solid #3b82f6;
   padding-left: 1.5rem;
-  margin: 2rem 0;
+  margin: 1.5rem 0;
   font-style: italic;
   color: #9aa3b2;
   font-size: 1.25rem;
+}
+.article-content img {
+  display: block;
+  width: clamp(250px, 75%, 500px);
+  height: auto;
+  margin: 1rem auto;
+  border-radius: 0.75rem;
+  object-fit: cover;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
+}
+.article-content img:hover {
+  transform: scale(1.02);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
 }
 .toc-sidebar {
   position: sticky;
